--- a/themes/ICEF/style.css
+++ b/themes/ICEF/style.css
@@ -553,10 +553,8 @@ a {
   list-style: none;
   width: 100%;
   margin: 0;
-
   padding: 0;
   z-index: 2; }
-
   @media (min-width: 1024px) {
     .menu {
       display: -ms-flexbox;
@@ -564,54 +562,7 @@ a {
       -ms-flex-pack: center;
           justify-content: center;
       position: absolute;
-      top: 0;
-      margin-top: 50px; } }
-  .menu ul {
-    list-style: none;
-    margin: 0;
-    padding-left: 0; }
-    .menu ul li {
-      background-color: #433E3E;
-      border-bottom: 1px solid white;
-      width: 100%;
-      display: -ms-flexbox;
-      display: flex;
-      -ms-flex-pack: center;
-          justify-content: center;
-      -ms-flex-align: center;
-          align-items: center;
-      height: 12.5vh;
-      text-transform: uppercase; }
-      @media (min-width: 1024px) {
-        .menu ul li {
-          display: inline-block;
-          background-color: transparent;
-          border: none;
-          width: auto;
-          padding: 0 30px; } }
-      .menu ul li a {
-        font-family: "Oswald", sans-serif;
-        color: white;
-        text-decoration: none; }
-  .menu li:last-child a {
-    padding-top: 10px;
-    text-align: center;
-    height: 50px;
-    width: 150px;
-    border-radius: 8px;
-    display: inline-block;
-    background-color: #852762;
-    color: white;
-    font-family: "Fira", sans-serif;
-    text-transform: uppercase;
-    font-size: 1.5rem;
-    border: none; }
-  .menu li:last-child a {
-    font-size: 1rem;
-    padding: 3px;
-    width: 100px;
-    height: 30px; }
-
+      top: 0; } }
   .menu li {
     background-color: #433E3E;
     border-bottom: 1px solid white;
@@ -683,9 +634,10 @@ li:last-child a {
 .show-menu {
   display: block; }
 
-.front-page-container .front-content-container {
-  width: 80%;
-  margin: 0 auto; }
+@media (min-width: 1024px) {
+  .front-page-container .front-content-container {
+    width: 80%;
+    margin: 0 auto; } }
 
 .front-page-container .front-page-head {
   position: relative;
@@ -807,7 +759,7 @@ li:last-child a {
   display: block;
   width: 100%;
   height: 80px;
-  background: url(../../images/svg/yellow-dots.svg);
+  background: url(../../images/svg/yellow-dots.svg) no-repeat;
   background-size: 700px;
   border-bottom: 2px solid #852762; }
   @media (min-width: 1024px) {
@@ -818,12 +770,12 @@ li:last-child a {
 .front-page-container .front-cross {
   position: relative;
   left: 47%;
-  bottom: 30px; }
+  top: 50px; }
 
 .front-page-container .front-heart {
   position: relative;
   left: 48%;
-  bottom: 30px; }
+  top: 50px; }
 
 .front-page-container .front-tekera-research h3 {
   text-align: center;
@@ -1141,6 +1093,9 @@ li:last-child a {
       color: black; }
     .page-template-approach ul li .tableNumbers {
       color: #B5852F; }
+
+.page-template-internship .content-area p {
+  margin: 1.5rem; }
 
 /*--------------------------------------------------------------
 # Media
